--- a/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.Data/Jekov.Nevix.Common.Data.csproj
+++ b/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.Data/Jekov.Nevix.Common.Data.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Repositories\GenericRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
