--- a/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.ViewModels/Jekov.Nevix.Common.ViewModels.csproj
+++ b/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.ViewModels/Jekov.Nevix.Common.ViewModels.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChannelViewModel.cs" />
     <Compile Include="MediaFileViewModel.cs" />
     <Compile Include="MediaFolderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
