--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.antonyjekov.nevix.LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
     </application>
 
 </manifest>
