--- a/Source/Android/Nevix/nevix/build.gradle
+++ b/Source/Android/Nevix/nevix/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compile 'com.android.support:support-v4:19.0.0'
     compile 'com.android.support:gridlayout-v7:19.0.0'
     compile 'com.android.support:appcompat-v7:19.0.0'
+    compile files('libs/bcprov-jdk15on-1.47.jar')
+    compile files('libs/Pubnub-Android-3.5.6.jar')
 }
