--- a/Source/Android/Nevix/nevix/build.gradle
+++ b/Source/Android/Nevix/nevix/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.0.0'
     compile files('libs/bcprov-jdk15on-1.47.jar')
     compile files('libs/Pubnub-Android-3.5.6.jar')
+    compile files('libs/gson-2.2.4.jar')
+    compile files('libs/gson-2.2.4-javadoc.jar')
+    compile files('libs/gson-2.2.4-sources.jar')
 }
