Finished basic login/register.

--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -10,13 +10,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.antonyjekov.nevix.MainActivity"
+            android:name="com.antonyjekov.nevix.activities.MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.antonyjekov.nevix.activities.AuthenticateActivity"
+            android:label="@string/title_activity_authenticate" >
         </activity>
     </application>
 
