--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="com.antonyjekov.nevix" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="9" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="com.antonyjekov.nevix.activities.MainActivity"
             android:label="@string/title_activity_main" >
