--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.antonyjekov.nevix" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk android:minSdkVersion="9" />
 
     <application
@@ -10,11 +11,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name="com.antonyjekov.nevix.activities.MainActivity"
             android:label="@string/title_activity_main" >
-
         </activity>
         <activity
             android:name="com.antonyjekov.nevix.activities.AuthenticateActivity"
@@ -24,6 +23,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.antonyjekov.nevix.activities.BrowseActivity"
+            android:label="@string/title_activity_browse" >
         </activity>
     </application>
 
