--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Jekov.Nevix.Web.ServerApi.csproj
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Jekov.Nevix.Web.ServerApi.csproj
@@ -143,10 +143,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MediaFilesController.cs" />
     <Compile Include="Controllers\MediaFoldersController.cs" />
+    <Compile Include="Controllers\MediaFoldersMobileController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
