--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.antonyjekov.nevix" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-sdk android:minSdkVersion="9" />
 
