--- a/Source/Jekov.Nevix/Desktop/Jekov.Nevix.Desktop.Client/Jekov.Nevix.Desktop.Client.csproj
+++ b/Source/Jekov.Nevix/Desktop/Jekov.Nevix.Desktop.Client/Jekov.Nevix.Desktop.Client.csproj
@@ -27,7 +27,7 @@
     <PublisherName>Antony Jekov</PublisherName>
     <SuiteName>Nevix</SuiteName>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>9</ApplicationRevision>
+    <ApplicationRevision>10</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -55,7 +55,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>36739D8F83C0EF340E62E8C9A6F4012915A40E2F</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>B6071857276ACA94DA2EBAFF3463DB975514E4F0</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestKeyFile>
@@ -105,6 +105,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlayerEntry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="LoginForm.resx">
