--- a/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.ViewModels/Jekov.Nevix.Common.ViewModels.csproj
+++ b/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.ViewModels/Jekov.Nevix.Common.ViewModels.csproj
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -55,6 +61,9 @@
       <Project>{3423210f-3494-436f-b044-3945c9144bfa}</Project>
       <Name>Jekov.Nevix.Common.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
