--- a/Source/Jekov.Nevix/Desktop/Jekov.Nevix.Desktop.Common/Jekov.Nevix.Desktop.Common.csproj
+++ b/Source/Jekov.Nevix/Desktop/Jekov.Nevix.Desktop.Common/Jekov.Nevix.Desktop.Common.csproj
@@ -34,6 +34,9 @@
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Pubnub.3.4.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -67,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="key.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
