--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="landscape"
             android:name="com.antonyjekov.nevix.activities.MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
@@ -29,6 +30,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="landscape"
             android:name="com.antonyjekov.nevix.activities.BrowseActivity"
             android:label="@string/title_activity_browse" >
         </activity>
