--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
@@ -22,6 +22,10 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+      <!-- add this -->
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
