Fixed some bugs and some exceptions.

--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\MSSQLSERVER2012;User Id=anton_nevix;Password=lDcw74%2;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\MSSQLSERVER2012;User Id=anton_nevix;Password=di#2Ff29;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
