--- a/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.Models/Jekov.Nevix.Common.Models.csproj
+++ b/Source/Jekov.Nevix/Common/Jekov.Nevix.Common.Models/Jekov.Nevix.Common.Models.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfirmUser.cs" />
+    <Compile Include="ForgottenPasswordRequest.cs" />
     <Compile Include="ModelConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NevixUser.cs" />
