--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
@@ -9,16 +9,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\MSSQLSERVER2012;User Id=anton_nevix;Password=di#2Ff29;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\MSSQLSERVER2012;User Id=anton_nevix;Password=MeLlOn!@#123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="false" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="false" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
