--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
@@ -14,7 +14,7 @@
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
@@ -23,7 +23,7 @@
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule"/>
+      <remove name="WebDAVModule" />
       <!-- add this -->
     </modules>
     <handlers>
