--- a/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
+++ b/Source/Android/Nevix/nevix/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:name=".App"
-        android:debuggable="false"
+        android:debuggable="true"
         android:allowBackup="true"
         android:icon="@drawable/launcher_icon"
         android:label="@string/app_name"
@@ -32,7 +32,6 @@
         </activity>
         <activity
             android:name="com.antonyjekov.nevix.activities.BrowseActivity"
-            android:label="@string/title_activity_browse"
             android:screenOrientation="landscape"></activity>
     </application>
 
