Cleanup and getting started improvements.

--- a/Source/Jekov.Nevix/Desktop/Jekov.Nevix.Desktop.Client/Jekov.Nevix.Desktop.Client.csproj
+++ b/Source/Jekov.Nevix/Desktop/Jekov.Nevix.Desktop.Client/Jekov.Nevix.Desktop.Client.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>ftp://ftp.antonyjekov.com/</PublishUrl>
+    <PublishUrl>ftp://ftp.antonyjekov.com/latest-build/</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
@@ -22,14 +22,14 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <UpdateUrl>http://antonyjekov.com/nevix/latest-build/</UpdateUrl>
+    <UpdateUrl>http://nevix-remote.com/latest-build/</UpdateUrl>
     <TargetCulture>en</TargetCulture>
     <ProductName>Nevix Desktop Client</ProductName>
     <PublisherName>Antony Jekov</PublisherName>
     <SuiteName>Nevix</SuiteName>
     <WebPage>publish.htm</WebPage>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>50</ApplicationRevision>
+    <ApplicationRevision>71</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
