--- a/Source/Android/Nevix/nevix/build.gradle
+++ b/Source/Android/Nevix/nevix/build.gradle
@@ -40,7 +40,7 @@ android {
         release {
             debuggable false
             jniDebugBuild false
-            runProguard false
+            runProguard true
             proguardFile 'proguard-rules.txt'
             zipAlign true
             signingConfig signingConfigs.release
@@ -55,8 +55,7 @@ dependencies {
     compile files('libs/bcprov-jdk15on-1.47.jar')
     compile files('libs/Pubnub-Android-3.5.6.jar')
     compile files('libs/gson-2.2.4.jar')
-    compile files('libs/gson-2.2.4-javadoc.jar')
-    compile files('libs/gson-2.2.4-sources.jar')
+    /*compile files('libs/gson-2.2.4-javadoc.jar')
+                    compile files('libs/gson-2.2.4-sources.jar')*/
     compile files('libs/StartAppInAppPlus-2.3.1.jar')
-    compile files('libs/pollfish.jar')
 }
