--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Web.config
@@ -4,6 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -22,6 +23,11 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <!--<caching>
+      <profiles>
+          <add name="Cache1Hour" duration="3600" varyByParam="none" extension=""/>
+      </profiles>
+    </caching>-->
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="WebDAVModule" />
       <!-- add this -->
